--- a/models/yolov5n_copy.yaml
+++ b/models/yolov5n_copy.yaml
@@ -45,8 +45,8 @@ head:
    [[-1, 10], 1, Concat, [1]],  # cat head P5
    [-1, 3, C3, [1024, False]],  # 23 (P5/32-large)
 
-   [4, 1, Conv, [2048, 1, 1]],  # 80 x 80
-   [6, 1, Conv, [2048, 1, 1]],  # 40 x 40
+  #  [4, 1, Conv, [2048, 1, 1]],  # 80 x 80
+  #  [6, 1, Conv, [2048, 1, 1]],  # 40 x 40
    [9, 1, Conv, [2048, 1, 1]],  # 20 x 20
 
    [[17, 20, 23], 1, Detect, [nc, anchors]],  # Detect(P3, P4, P5)
